more layout complete

--- a/app/index.html
+++ b/app/index.html
@@ -9,13 +9,36 @@
   </head>
 
   <body>
-    <nav>
-      <ul>
-        <li>Americas</li>
-        <li>Europe</li>
-        <li>Asia</li>
-      </ul>
-    </nav>
+    <div>
+      <header>
+        <nav>
+          <img class="plane" src="img/plane.png" />
+          <ul>
+            <li><a href="#">Americas</a></li>
+            <li><a href="#">Europe</a></li>
+            <li><a href="#">Asia</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <h1>Welcome to my travel page!</h1>
+      <p>
+        This page includes information about some of my favorite places that
+        I've visited among three continents. I hope to visit more places as time
+        passes, but if you're looking for recommendations, each of these
+        destinations have many things to offer. Get started by taking a look at
+        links in the navigation menu at the top.
+      </p>
+
+      <footer>
+        <p>
+          If you have any questions, feel free to
+          <a href="mailto:fakeemail@email.com">contact me!</a>
+        </p>
+        <p>All pictures belong to Jesse Campo.</p>
+      </footer>
+    </div>
+
     <script src="js/scripts.js"></script>
   </body>
 </html>
