--- a/app/index.html
+++ b/app/index.html
@@ -9,26 +9,34 @@
   </head>
 
   <body>
-    <div>
+    <div class="maindiv">
       <header>
         <nav>
           <img class="plane" src="img/plane.png" />
           <ul>
-            <li><a href="#">Americas</a></li>
-            <li><a href="#">Europe</a></li>
-            <li><a href="#">Asia</a></li>
+            <li><a href="#" class="Americas">Americas</a></li>
+            <li><a href="#" class="Europe">Europe</a></li>
+            <li><a href="#" class="Asia">Asia</a></li>
           </ul>
         </nav>
+
+        <modal class="modal" id="modal"> </modal>
       </header>
 
       <h1>Welcome to my travel page!</h1>
-      <p>
-        This page includes information about some of my favorite places that
-        I've visited among three continents. I hope to visit more places as time
-        passes, but if you're looking for recommendations, each of these
-        destinations have many things to offer. Get started by taking a look at
-        links in the navigation menu at the top.
-      </p>
+      <main>
+        <img class="mainpic" src="img/plane.png" />
+        <p>
+          This page includes information about some of my favorite places that
+          I've visited among three continents. I hope to visit more places as
+          time passes, but if you're looking for recommendations, each of these
+          destinations have many things to offer. Get started by taking a look
+          at links in the navigation menu at the top. Here's some more text just
+          to test how it looks when it wraps around with the picture and
+          whatnot. Maybe it doesn't work as I was hoping, but we're going to see
+          if I just keep typing more.
+        </p>
+      </main>
 
       <footer>
         <p>
@@ -39,6 +47,7 @@
       </footer>
     </div>
 
+    <script src="js/data-object.js"></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
