--- a/app/index.html
+++ b/app/index.html
@@ -25,16 +25,22 @@
 
       <h1>Welcome to my travel page!</h1>
       <main>
-        <img class="mainpic" src="img/plane.png" />
+        <aside>
+          <img class="mainpic" src="img/puertorico1.jpg" height="200" />
+          <p>Río Camuy, Puerto Rico</p>
+        </aside>
         <p>
           This page includes information about some of my favorite places that
-          I've visited among three continents. I hope to visit more places as
-          time passes, but if you're looking for recommendations, each of these
-          destinations have many things to offer. Get started by taking a look
-          at links in the navigation menu at the top. Here's some more text just
-          to test how it looks when it wraps around with the picture and
-          whatnot. Maybe it doesn't work as I was hoping, but we're going to see
-          if I just keep typing more.
+          I've visited among three continents. I've been to a bunch more places,
+          but I'm selecting just three from each continent for now. I hope to
+          visit more places as time passes, and eventually perhaps I will add
+          more of them to this site.
+          <br /><br />
+          For now, if you're looking for recommendations, each of these
+          destinations has many things to offer. You can get started by taking a
+          look at the links in the navigation menu at the top. Each destination
+          includes two of my favorite pictures that I took while visiting, as
+          well as some brief highlights and must-visit attractions.
         </p>
       </main>
 
