destination page layout first draft added

--- a/app/index.html
+++ b/app/index.html
@@ -42,12 +42,14 @@
           includes two of my favorite pictures that I took while visiting, as
           well as some brief highlights and must-visit attractions.
         </p>
+
+        <img class="plane2" src="img/plane2.png" />
       </main>
 
       <footer>
         <p>
           If you have any questions, feel free to
-          <a href="mailto:fakeemail@email.com">contact me!</a>
+          <a href="mailto:jessecampo@gmail.com">contact me!</a>
         </p>
         <p>All pictures belong to Jesse Campo.</p>
       </footer>
