still before ssg, more layout adjustments

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,11 @@
     <div class="maindiv">
       <header>
         <nav>
-          <img class="plane" src="img/plane.png" />
+          <img
+            class="plane"
+            src="img/plane.png"
+            alt="Silly airplane in the navigation bar"
+          />
           <ul>
             <li><a href="#" class="Americas">Americas</a></li>
             <li><a href="#" class="Europe">Europe</a></li>
@@ -26,7 +30,14 @@
       <h1>Welcome to my travel page!</h1>
       <main>
         <aside>
-          <img class="mainpic" src="img/puertorico1.jpg" height="200" />
+          <picture>
+            <img
+              class="mainpic"
+              src="img/puertorico1.jpg"
+              alt="Río Camuy, Puerto Rico"
+              height="200"
+            />
+          </picture>
           <p>Río Camuy, Puerto Rico</p>
         </aside>
         <p>
@@ -43,7 +54,13 @@
           well as some brief highlights and must-visit attractions.
         </p>
 
-        <img class="plane2" src="img/plane2.png" />
+        <picture>
+          <img
+            class="plane2"
+            src="img/plane2.png"
+            alt="Second silly airplane at the bottom of the main element"
+          />
+        </picture>
       </main>
 
       <footer>
