--- a/app/temp.html
+++ b/app/temp.html
@@ -27,10 +27,14 @@
             recommend for people looking to explore a new city. Maybe just steer
             clear of the winter, for obvious reasons!
           </p>
-          <img class="image2" src="img/chicago2.jpg" height="250" />
+          <picture>
+            <img class="image2" src="img/chicago2.jpg" alt="Landscape photo of Chicago skyline" height="250" />
+          </picture>
         </article>
         <aside>
-          <img class="image1" src="img/chicago1.jpg" height="330" />
+          <picture>
+            <img class="image1" src="img/chicago1.jpg" alt="Portait photo of Chicago skyline" height="330" />
+          </picture>
           <div class="reclist">
             <h3>Recommended Attractions</h3>
             <ul>
