--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jesse's Top Travel Destinations</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
 
   <body>
@@ -14,7 +14,7 @@
         <nav>
           <img
             class="plane"
-            src="img/plane.png"
+            src="/img/plane.png"
             alt="Silly airplane in the navigation bar"
           />
           <ul>
@@ -29,18 +29,18 @@
 
       <h1>Welcome to my travel page!</h1>
       <main>
-        <aside>
+        <aside class="aside1">
           <picture>
             <img
               class="mainpic"
-              src="img/puertorico1.jpg"
+              src="/img/puertorico1.jpg"
               alt="Río Camuy, Puerto Rico"
               height="200"
             />
           </picture>
           <p>Río Camuy, Puerto Rico</p>
         </aside>
-        <p>
+        <p class="p1">
           This page includes information about some of my favorite places that
           I've visited among three continents. I've been to a bunch more places,
           but I'm selecting just three from each continent for now. I hope to
@@ -53,11 +53,11 @@
           includes two of my favorite pictures that I took while visiting, as
           well as some brief highlights and must-visit attractions.
         </p>
-
+        <p>Click the plane below to travel to a random destination page!</p>
         <picture>
           <img
             class="plane2"
-            src="img/plane2.png"
+            src="/img/plane2.png"
             alt="Second silly airplane at the bottom of the main element"
           />
         </picture>
@@ -72,7 +72,7 @@
       </footer>
     </div>
 
-    <script src="js/data-object.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="/js/data-object.js"></script>
+    <script src="/js/scripts.js"></script>
   </body>
 </html>
